Added menu items

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,8 +43,8 @@
   
       <ul>
         <li><a href="index.html" {% if page.id == 'home' %}class="here"{% endif %}>Home</a></li>
-        <!--<li><a href="about.html" {% if page.id == 'about' %}class="here"{% endif %}>About us</a></li>
-        <li><a href="credits.html" class="last{% if page.id == 'credits' %} here{% endif %}">Credits</a></li>-->
+        <li><a href="about.html" {% if page.id == 'about' %}class="here"{% endif %}>About us</a></li>
+        <li><a href="credits.html" class="last{% if page.id == 'credits' %} here{% endif %}">Credits</a></li>
       </ul>
   
     </div>
@@ -65,24 +65,24 @@
             <span class="desc">How to get started with SconsSolver</span>
           </a>
         </li>
-<!--        <li>
-          <a href="labs-overview.html" onfocus="blur()" {% if page.id == 'labs-overview' %}class="here"{% endif %}>
-            <span class="title">The Labs</span>
-            <span class="desc style3">An overview of our labs and what they are about</span>
+       <li>
+          <a href="documentation.html" onfocus="blur()" {% if page.id == 'documentation' %}class="here"{% endif %}>
+            <span class="title">Documentation</span>
+            <span class="desc style3">Information on how to use SconSolver</span>
           </a>
         </li>
-        <li>
+        <!--<li>
           <a href="learning-scala.html" onfocus="blur()" {% if page.id == 'learning-scala' %}class="here"{% endif %}>
             <span class="title">Learning Scala</span>
             <span class="desc">Online resources for learning about Scala</span>
           </a>
-        </li>
+        </li>-->
         <li
           <a href="contribute.html" onfocus="blur()" {% if page.id == 'contribute' %}class="here"{% endif %}>
             <span class="title">Contribute</span>
-            <span class="desc">How to create your own labs and contribute them</span>
+            <span class="desc">How to contribute by creating new propagators etc</span>
           </a>
-        </li>>-->
+        </li>
       </ul>
   
     </div>
