--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,16 +71,16 @@
             <span class="desc style3">Information on how to use SconSolver</span>
           </a>
         </li>
-        <!--<li>
-          <a href="learning-scala.html" onfocus="blur()" {% if page.id == 'learning-scala' %}class="here"{% endif %}>
-            <span class="title">Learning Scala</span>
-            <span class="desc">Online resources for learning about Scala</span>
-          </a>
-        </li>-->
         <li>
           <a href="contribute.html" onfocus="blur()" {% if page.id == 'contribute' %}class="here"{% endif %}>
             <span class="title">Contribute</span>
             <span class="desc">How to contribute by creating new propagators etc</span>
+          </a>
+        </li>
+        <li>
+          <a href="links.html" onfocus="blur()" {% if page.id == 'links' %}class="here"{% endif %}>
+            <span class="title">Links</span>
+            <span class="desc">Links to other solvers</span>
           </a>
         </li>
       </ul>
