--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
       </a>-->
   
       <ul>
-        <li><a href="index.html" {% if page.id == 'home' %}class="here"{% endif %}>Home</a></li>
+        <li><a href="http://kjellwinblad.github.com/sconsolver/" {% if page.id == 'home' %}class="here"{% endif %}>Home</a></li>
         <li><a href="about.html" {% if page.id == 'about' %}class="here"{% endif %}>About us</a></li>
         <li><a href="credits.html" class="last{% if page.id == 'credits' %} here{% endif %}">Credits</a></li>
       </ul>
