--- a/styles/shThemeDefault.css
+++ b/styles/shThemeDefault.css
@@ -1,183 +1,117 @@
 /**
  * SyntaxHighlighter
- * http://alexgorbatchev.com/
+ * http://alexgorbatchev.com/SyntaxHighlighter
+ *
+ * SyntaxHighlighter is donationware. If you are using it, please donate.
+ * http://alexgorbatchev.com/SyntaxHighlighter/donate.html
  *
  * @version
- * 2.0.278 (February 03 2009)
- *
- * @author
- * Alex Gorbatchev
+ * 3.0.83 (July 02 2010)
  * 
  * @copyright
- * Copyright (C) 2004-2009 Alex Gorbatchev.
+ * Copyright (C) 2004-2010 Alex Gorbatchev.
  *
- * Licensed under a GNU Lesser General Public License.
- * http://creativecommons.org/licenses/LGPL/2.1/
- *
- * SyntaxHighlighter is donationware. You are allowed to download, modify and distribute 
- * the source code in accordance with LGPL 2.1 license, however if you want to use 
- * SyntaxHighlighter on your site or include it in your product, you must donate.
- * http://alexgorbatchev.com/wiki/SyntaxHighlighter:Donate
+ * @license
+ * Dual licensed under the MIT and GPL licenses.
  */
-/************************************
- * Default Syntax Highlighter theme.
- * 
- * Interface elements.
- ************************************/
-
-.syntaxhighlighter
-{
-	background-color: #E7E5DC;
+.syntaxhighlighter {
+  background-color: white !important;
+}
+.syntaxhighlighter .line.alt1 {
+  background-color: white !important;
+}
+.syntaxhighlighter .line.alt2 {
+  background-color: white !important;
+}
+.syntaxhighlighter .line.highlighted.alt1, .syntaxhighlighter .line.highlighted.alt2 {
+  background-color: #e0e0e0 !important;
+}
+.syntaxhighlighter .line.highlighted.number {
+  color: black !important;
+}
+.syntaxhighlighter table caption {
+  color: black !important;
+}
+.syntaxhighlighter .gutter {
+  color: #afafaf !important;
+}
+.syntaxhighlighter .gutter .line {
+  border-right: 3px solid #6ce26c !important;
+}
+.syntaxhighlighter .gutter .line.highlighted {
+  background-color: #6ce26c !important;
+  color: white !important;
+}
+.syntaxhighlighter.printing .line .content {
+  border: none !important;
+}
+.syntaxhighlighter.collapsed {
+  overflow: visible !important;
+}
+.syntaxhighlighter.collapsed .toolbar {
+  color: blue !important;
+  background: white !important;
+  border: 1px solid #6ce26c !important;
+}
+.syntaxhighlighter.collapsed .toolbar a {
+  color: blue !important;
+}
+.syntaxhighlighter.collapsed .toolbar a:hover {
+  color: red !important;
+}
+.syntaxhighlighter .toolbar {
+  color: white !important;
+  background: #6ce26c !important;
+  border: none !important;
+}
+.syntaxhighlighter .toolbar a {
+  color: white !important;
+}
+.syntaxhighlighter .toolbar a:hover {
+  color: black !important;
+}
+.syntaxhighlighter .plain, .syntaxhighlighter .plain a {
+  color: black !important;
+}
+.syntaxhighlighter .comments, .syntaxhighlighter .comments a {
+  color: #008200 !important;
+}
+.syntaxhighlighter .string, .syntaxhighlighter .string a {
+  color: blue !important;
+}
+.syntaxhighlighter .keyword {
+  color: #006699 !important;
+}
+.syntaxhighlighter .preprocessor {
+  color: gray !important;
+}
+.syntaxhighlighter .variable {
+  color: #aa7700 !important;
+}
+.syntaxhighlighter .value {
+  color: #009900 !important;
+}
+.syntaxhighlighter .functions {
+  color: #ff1493 !important;
+}
+.syntaxhighlighter .constants {
+  color: #0066cc !important;
+}
+.syntaxhighlighter .script {
+  font-weight: bold !important;
+  color: #006699 !important;
+  background-color: none !important;
+}
+.syntaxhighlighter .color1, .syntaxhighlighter .color1 a {
+  color: gray !important;
+}
+.syntaxhighlighter .color2, .syntaxhighlighter .color2 a {
+  color: #ff1493 !important;
+}
+.syntaxhighlighter .color3, .syntaxhighlighter .color3 a {
+  color: red !important;
 }
 
-/* Highlighed line number */
-.syntaxhighlighter .line.highlighted .number
-{
-	background-color: #6CE26C;
-	color: black;
-}
-
-/* Highlighed line */
-.syntaxhighlighter .line.highlighted.alt1 .content,
-.syntaxhighlighter .line.highlighted.alt2 .content
-{
-	background-color: #6CE26C;
-}
-
-/* Gutter line numbers */
-.syntaxhighlighter .line .number
-{
-	color: #5C5C5C;
-}
-
-/* Add border to the lines */
-.syntaxhighlighter .line .content
-{
-	border-left: 3px solid #6CE26C;
-	color: #000;
-}
-
-.syntaxhighlighter.printing .line .content 
-{
-	border: 0;
-}
-
-/* First line */
-.syntaxhighlighter .line.alt1 .content
-{
-	background-color: #fff;
-}
-
-/* Second line */
-.syntaxhighlighter .line.alt2 .content
-{
-	background-color: #F8F8F8;
-}
-
-.syntaxhighlighter .line .content .block
-{
-	background: url(wrapping.png) 0 1.1em no-repeat;
-}
-
-.syntaxhighlighter .ruler
-{
-	color: silver;
-	background-color: #F8F8F8;
-	border-left: 3px solid #6CE26C;
-}
-
-.syntaxhighlighter.nogutter .ruler
-{
-	border: 0;
-}
-
-.syntaxhighlighter .toolbar
-{
-	background-color: #F8F8F8;
-	border: #E7E5DC solid 1px;
-}
-
-.syntaxhighlighter .toolbar a
-{
-	color: #a0a0a0;
-}
-
-.syntaxhighlighter .toolbar a:hover
-{
-	color: red;
-}
-
-/************************************
- * Actual syntax highlighter colors.
- ************************************/
-.syntaxhighlighter .plain,
-.syntaxhighlighter .plain a
-{ 
-	color: #000;
-}
-
-.syntaxhighlighter .comments,
-.syntaxhighlighter .comments a
-{ 
-	color: #008200;
-}
-
-.syntaxhighlighter .string,
-.syntaxhighlighter .string a
-{
-	color: blue; 
-}
-
-.syntaxhighlighter .keyword
-{ 
-	color: #069; 
-	font-weight: bold; 
-}
-
-.syntaxhighlighter .preprocessor 
-{ 
-	color: gray; 
-}
-
-.syntaxhighlighter .variable 
-{ 
-	color: #a70; 
-}
-
-.syntaxhighlighter .value
-{ 
-	color: #090; 
-}
-
-.syntaxhighlighter .functions
-{ 
-	color: #ff1493; 
-}
-
-.syntaxhighlighter .constants
-{ 
-	color: #0066CC; 
-}
-
-.syntaxhighlighter .script
-{ 
-	background-color: yellow !important;
-}
-
-.syntaxhighlighter .color1,
-.syntaxhighlighter .color1 a
-{ 
-	color: #808080; 
-}
-
-.syntaxhighlighter .color2,
-.syntaxhighlighter .color2 a
-{ 
-	color: #ff1493; 
-}
-
-.syntaxhighlighter .color3,
-.syntaxhighlighter .color3 a
-{ 
-	color: red; 
+.syntaxhighlighter .keyword {
+  font-weight: bold !important;
 }
