--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,17 +13,10 @@
   <meta name="keywords" content="scala, constraint solver, constraint, solver, integer" />
   <meta name="robots" content="index, follow" />
 
-  <link rel="stylesheet" type="text/css" href="css/layout.css" media="screen, projection, tv " />
-  <link rel="stylesheet" type="text/css" href="css/html.css" media="screen, projection, tv " />
-  <link rel="stylesheet" type="text/css" href="css/syntax.css" media="screen, projection, tv " />
- 
+	<script type="text/javascript" src="scripts/shCore.js"></script>
 	<script type="text/javascript" src="scripts/shBrushScala.js"></script>
-	<link type="text/css" rel="stylesheet" href="styles/shCore.css"/>
-	<link type="text/css" rel="stylesheet" href="styles/shThemeDefault.css"/>
-	<script type="text/javascript">
-		SyntaxHighlighter.config.clipboardSwf = 'scripts/clipboard.swf';
-		SyntaxHighlighter.all();
-	</script>
+	<link type="text/css" rel="stylesheet" href="styles/shCoreDefault.css"/>
+	<script type="text/javascript">SyntaxHighlighter.all();</script>
  
  
 </head>
