--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
   
       <ul>
         <li><a href="http://kjellwinblad.github.com/sconsolver/" {% if page.id == 'home' %}class="here"{% endif %}>Home</a></li>
-        <li><a href="about.html" {% if page.id == 'about' %}class="here"{% endif %}>About us</a></li>
+        <li><a href="about.html" {% if page.id == 'about' %}class="here"{% endif %}>About</a></li>
         <li><a href="credits.html" class="last{% if page.id == 'credits' %} here{% endif %}">Credits</a></li>
       </ul>
   
