Fixed some small formatting things.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
     <!-- #header: holds the logo and top links -->
     <div id="header" class="width">
   
-      <a href="index.html"><img src="images/logo.gif" alt="SconSolver Logo"/></a>
+      <img src="images/logo.gif" alt="SconSolver Logo"/>
         
       <!--<a href="http://www.xebia.com/">
           <img style="position: relative; top: 15px; left: -180px; border: 0; z-index:100000;" 
@@ -58,7 +58,7 @@
   
   
     <!-- #headerImg: holds the main header image or flash -->
-    <div id="headerImg" class="width"></div>
+    <a href="index.html"><div id="headerImg" class="width"></div></a>
   
   
   <!-- #menu: the main large box site menu -->
